fix: fix image and category mapping at create and update